--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,38 +1,31 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.header{
+  position: absolute;
+  top:20%;
+  margin: auto;
+}
+.main_img{
+ width:300px;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.start_btn{
+  position: absolute;
+  top:65%;
+  margin: auto;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.start_btn> button{
+  display:block;
+  width:1000px;
+}
+
+.start_btn>button:first-child{
+  margin-bottom: 25px;
 }
