--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,31 +1,33 @@
 .App {
   text-align: center;
   display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-}
-.header{
-  position: absolute;
-  top:20%;
+  width: 90%;
+  height: 100vh;
   margin: auto;
 }
+
+.header{
+  width: 90%;
+  margin-bottom: 50px;
+
+}
+
 .main_img{
- width:300px;
- 
+  width: 400px;
 }
 
 .start_btn{
-  position: absolute;
-  top:65%;
-  margin: auto;
-
+  width: 90%;
 }
 
-.start_btn> button{
-  display:block;
-  width:1000px;
+.start_btn>button{
+  width: 80%;
 }
 
-.start_btn>button:first-child{
-  margin-bottom: 25px;
+.start_btn>button:nth-child(1){
+  margin-bottom: 20px;
 }
