--- a/src/stylesheets/Signin.css
+++ b/src/stylesheets/Signin.css
@@ -1,3 +1,5 @@
+
+
 form{
     margin: 0 auto;
     width: 60vw;
@@ -10,9 +12,32 @@ form{
     border: 1px solid #ddd;
     color: #aaa;
 }
+.join_btn{
+    width: 100%;
+    margin-top: 20px;
+    height: 40px;
+    background: #eeeeee80;
+    border: 1px solid #ddd;
+    color: #aaa;
+}
 .forgotPwd{
     color: #aaa;
     font-size: 13px;
     margin: 15px;
     text-align: center;
+}
+
+.join_txt{
+    width: 445px;
+    color: #333;
+    font-size: 13px;
+    margin: 15px auto;
+    word-wrap: break-word;
+    word-break: keep-all;
+}
+
+a{
+    color:#01a2f8;
+    font-weight: 600;
+    text-decoration: none;
 }
