--- a/src/stylesheets/Feed.css
+++ b/src/stylesheets/Feed.css
@@ -62,56 +62,89 @@
   font-weight: 800;
 }
 
-body {
-  font-family: 'Pretendard';
+.feed-box {
+  position: relative;
+  width: 75vw;
+  height: auto;
+  top: 0;
+  right: 0;
+  padding: 0.75em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.goals-list-box {
-  position: relative;
+.feed-box h2 {
+  font-family: 'Hahmlet';
+  font-size: 2.25em;
+  font-weight: 700;
+  letter-spacing: -0.2px;
+}
+
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem {
+  margin-bottom: 1em;
+  border-radius: 8px;
+}
+
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem .goals-listItem-text-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  width: 90%;
-  margin: 0 auto;
-  padding: 20px;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: auto;
+  padding: .3em .6em;
+  background-color: #f5f5f5;
+  border: 1px solid #f3f3f3;
+  border-radius: 4px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: inherit;
 }
 
-.goals-list-box .goals-list-wrap {
-  width: 100%;
-  margin: 0 auto;
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem .goals-listItem-text-wrap .goals-listItem-icon {
+  font-size: 15px;
+  color: #000;
+  margin-right: .5em;
 }
 
-.goals-list-box .goals-list-wrap .goals-list {
-  width: 100%;
-  margin: 0 auto;
-  padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem .goals-listItem-text-wrap .goals-listItem-text {
+  width: auto;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
 }
 
-.goals-list-box .goals-list-wrap .goals-list .goals-listItem-btn {
-  width: 80%;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  padding-left: 2em;
-  font-family: inherit;
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem .goals-listItem-text-wrap .goals-listItem-text .MuiListItemText-primary {
+  width: auto;
+  margin-right: .5em;
+  letter-spacing: -0.25px;
+  font-size: 13px;
+  font-family: 'Pretendard';
   font-weight: 900;
-  font-size: 14px;
 }
 
-.goals-list-box .goals-list-wrap .goals-list .goals-clickToEdit-btn {
-  font-size: 10px;
-  color: #aaa;
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem .goals-listItem-text-wrap .goals-listItem-add-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-width: 0;
+  width: 16px;
+  height: 16px;
+  background: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
 }
-/*# sourceMappingURL=Goal.css.map */
+
+.feed-box .feed-goals-list-box .goals-list-wrap .goals-listItem .goals-listItem-text-wrap .goals-listItem-add-icon span {
+  color: #000;
+}
+/*# sourceMappingURL=Feed.css.map */
