--- a/src/stylesheets/Goal.scss
+++ b/src/stylesheets/Goal.scss
@@ -1,3 +1,10 @@
+@import './abstracts/font';
+
+body{
+    font-family: 'Pretendard';
+  
+  }
+
 .goals-list-box{
 
     position: relative;
@@ -7,6 +14,7 @@
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
+    font-family: inherit;
 
     .goals-list-wrap{
         width: 100%;
@@ -24,8 +32,9 @@
                 width: 80%;
                 justify-content:start;
                 padding-left: 2em;
-                font-weight: 600;
-                font-size: 15px;
+                font-family: inherit;
+                font-weight: 900;
+                font-size: 14px;
             }
             .goals-clickToEdit-btn{ //title 삭제
                     font-size: 10px;
