--- a/src/stylesheets/GoalForm.css
+++ b/src/stylesheets/GoalForm.css
@@ -1,3 +1,71 @@
+@charset "UTF-8";
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff") format("woff");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Hahmlet';
+  src: local(※), url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/Hahmlet-ExtraBold.woff2") format("woff2");
+  unicode-range: U+0041-005A, U+0061-007A;
+  font-weight: 800;
+}
+
+body {
+  font-family: 'Pretendard';
+}
+
 .goals-form-dialog-box {
   position: relative;
   display: -webkit-box;
@@ -12,6 +80,7 @@
   padding: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Pretendard';
 }
 
 .goals-form-dialog-box .goals-form {
@@ -22,6 +91,11 @@
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap {
   width: 100%;
   margin: 0 auto;
+  font-family: 'Pretendard';
+}
+
+.goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap {
+  font-family: inherit;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root {
@@ -29,25 +103,26 @@
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root #goalform_textfield {
-  font-weight: 600;
+  font-family: 'Pretendard';
+  font-weight: 900;
   width: 100%;
   padding: 12px;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root #goalform_textfield ::-webkit-input-placeholder {
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root #goalform_textfield :-ms-input-placeholder {
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root #goalform_textfield ::-ms-input-placeholder {
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root #goalform_textfield ::placeholder {
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-text-wrap .MuiTextField-root .css-1480iag-MuiInputBase-root-MuiInput-root:before {
@@ -68,6 +143,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-family: inherit;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-privacy-wrap .goals-form-privacy {
@@ -79,7 +155,8 @@
   width: 70%;
   text-align: left;
   color: #000;
-  font-weight: 600;
+  font-family: 'Pretendard';
+  font-weight: 800;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-privacy-wrap .goals-form-privacy span {
@@ -87,7 +164,8 @@
   width: 30%;
   text-align: right;
   color: #000;
-  font-weight: 600;
+  font-family: 'Pretendard';
+  font-weight: 800;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-color-wrap {
@@ -111,7 +189,8 @@
   width: 70%;
   text-align: left;
   color: #000;
-  font-weight: 600;
+  font-family: 'Pretendard';
+  font-weight: 800;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-color-wrap .goals-form-color span {
@@ -119,7 +198,8 @@
   width: 30%;
   text-align: right;
   color: #000;
-  font-weight: 600;
+  font-family: 'Pretendard';
+  font-weight: 800;
 }
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-submit {
@@ -131,7 +211,8 @@
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-submit button {
   font-size: 15px;
-  font-weight: 700;
+  font-family: 'Pretendard';
+  font-weight: 900;
   color: #000;
 }
 
