--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -93,6 +93,10 @@
   width: 400px;
 }
 
+.App .header h1 {
+  font-family: 'Hahmlet';
+}
+
 .App .start_btn {
   width: 90%;
 }
@@ -101,9 +105,15 @@
   width: 80%;
   font-weight: 400;
   font-size: 12px;
+  background-color: #f5f5f5;
 }
 
 .App .start_btn button:nth-child(1) {
   margin-bottom: 1em;
+}
+
+.App .start_btn button:hover {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 /*# sourceMappingURL=App.css.map */
