--- a/src/stylesheets/CalendarBox.css
+++ b/src/stylesheets/CalendarBox.css
@@ -85,8 +85,7 @@ body {
 }
 
 .MuiPickersBasePicker-pickerView {
-  max-width: 32vw !important;
-  min-width: 350px;
+  width: 310px;
   min-height: 0 !important;
 }
 
