--- a/src/stylesheets/CalendarBox.scss
+++ b/src/stylesheets/CalendarBox.scss
@@ -29,8 +29,7 @@ body{
 
 .MuiPickersBasePicker-pickerView{
     // 달력
-    max-width: 32vw!important;
-    min-width: 350px;
+    width: 310px;
     min-height: 0!important;
 
 
