--- a/src/stylesheets/Feed.scss
+++ b/src/stylesheets/Feed.scss
@@ -75,10 +75,190 @@
                     } 
 
                 }
-                .goals-listItem-input{
+                .goals-todo-input-title{
                     display: block;
                 }
             }
         }
     }
+}
+
+.goals-todo-input-list-Box{
+    width: 100%;
+    min-width: 320px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.1em;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    .goals-todo-input-list-check-wrap{
+        display: flex;
+        align-items: center;
+        flex-flow: row nowrap;
+        width: 100%;
+
+        .goals-todo-list-input-check-icon{
+            margin-right: 0.5em;
+            color: $text-gray;
+            cursor: pointer;
+        }
+        .goals-todo-list-input{
+            width: 100%;
+            font-family: 'Pretendard';
+            font-size: 0.95em;
+            cursor: pointer;
+            outline: 0;
+            border: 0;
+
+            &::placeholder {
+                color: $text-black;
+            }
+
+            &:focus-visible{
+                position: relative;
+                border-bottom: 1px solid #000;
+                outline: none;
+                font-family: 'Pretendard';
+                font-size: 0.95em;
+                cursor: pointer;
+                padding: 0 0 10px 2px;
+                top: 5px;
+            }
+        }
+    }
+
+    .goals-todo-list-input-btn{
+        
+
+        .goals-todo-list-input-btn-icon{
+            position: relative;
+            color: $text-gray;
+            top: -1px;
+            cursor: pointer;
+        }
+    }
+    
+}
+
+.goals-todo-input-create-Box{
+    
+    min-width: 320px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.1em;
+    box-sizing: border-box;
+
+    .goals-todo-input-create-wrap{
+        display: flex;
+        width: 100%;
+        align-items: center;
+
+        .goals-todo-input-create-check-icon{
+            position: relative;
+            margin-right: 0.5em;
+            color: $text-gray;
+            cursor: pointer;
+        }
+        .goals-todo-input-create-field{
+            position: relative;
+            width: 100%;
+            border:none;
+            border-bottom: 1px solid #000;
+            outline: none;
+            font-family: 'Pretendard';
+            font-size: 0.95em;
+            cursor: pointer;
+            padding: 0 0 10px 0;
+            top: 5px;
+
+            &:focus-visible{
+                outline: 0;
+            }
+            
+        }
+        .goals-todo-input-btn{
+            position: relative;
+            color: $text-gray;
+            top: -1px;
+            visibility: hidden;
+        }      
+    }
+}
+
+.feed-todo-modal-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    .feed-todo-modal-wrap{
+        display: flex;
+        width: 300px;
+        height: 230px;
+        border-radius: 8px;
+        padding: 1.5em;
+        box-sizing: border-box;
+        flex-flow: column nowrap;
+        font-family: 'Pretendard';
+
+        background-color: $bg-white;
+
+        .feed-todo-modal-head{
+            width: 250px;
+            height: 2.2em;
+            font-family: 'Pretendard';
+            font-size: 1em;
+            margin: 0 auto 0.3em;
+            word-wrap: break-word;
+            word-break: keep-all;
+            text-align: center;
+            text-overflow: ellipsis;  /* 말줄임 적용 */
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+        .feed-todo-modal-icon-wrap{
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-flow: row wrap;
+
+            button{
+                display: flex;
+                position: relative;
+                justify-content: center;
+                align-items:center;
+                background-color: $goal-btn-gray;
+                width: 45px;
+                height: 45px;
+                margin: 12px 12px;
+                border-radius: 50%;
+                border: none;
+                cursor: pointer;
+                
+                .feed-modal-icon{
+                    font-family: 'Pretendard';
+                    color: $text-black;
+                    font-size: 1.5em;
+                }
+
+                span{
+                    display: inline-block;
+                    position: absolute;
+                    width: 52px;
+                    font-size: 0.65em;
+                    letter-spacing: -0.2px;
+                    top: 50px;
+                }
+            }
+        }
+        
+    }
+
 }
