--- a/src/stylesheets/Feed.css
+++ b/src/stylesheets/Feed.css
@@ -408,4 +408,164 @@
   letter-spacing: -0.2px;
   top: 50px;
 }
+
+.todo-modal-datePicker-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #1c1c1c;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box {
+  background: #fff;
+  border-radius: 12px;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker-box-title-wrap {
+  text-align: center;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker-box-title-wrap p {
+  font-size: 14px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker-box-title-wrap span {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 10px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 5px 5px 0 18px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div {
+  font-family: 'Pretendard';
+  font-size: 18px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div:nth-child(1) {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div:nth-child(2) {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div:nth-child(2) :after {
+  display: inline-block;
+  content: "년";
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn button {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer {
+  overflow-y: hidden;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-1n2mv2k span {
+  font-size: 13px;
+  font-family: 'Pretendard';
+  font-weight: 500;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 {
+  min-height: 260px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn .css-mvmu1r {
+  margin: 1px 0;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn .css-mvmu1r div div {
+  margin: 0;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn .css-mvmu1r div button {
+  font-family: 'Pretendard';
+  font-weight: 300;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-btn-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-btn-wrap .todo-modal-datePicker-btn {
+  position: relative;
+  width: 110px;
+  height: 40px;
+  font-family: 'Pretendard';
+  font-weight: 400;
+  background: #f5f5f5;
+  border: #f3f3f3;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  color: #1c1c1c;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-btn-wrap button:nth-child(1) {
+  margin-right: 25px;
+}
+
+.css-195y93z-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
+  border: 1px soild #f3f3f3;
+  border-radius: 50%;
+}
 /*# sourceMappingURL=Feed.css.map */
