--- a/src/stylesheets/CalendarBox.scss
+++ b/src/stylesheets/CalendarBox.scss
@@ -1,4 +1,7 @@
+@import './abstracts/variables';
 @import './abstracts/font';
+@import './abstracts/mixin';
+
 // 캘린더 헤더 연-월 정렬
 body{
     font-family: 'Pretendard','Hahmlet';
@@ -107,3 +110,35 @@ body{
     
 
 }
+
+.todo-modal-dayPicker{
+    display: flex;
+    width: 300px;
+    align-items: center;
+    padding: 50px;
+    box-sizing: border-box;
+
+    #dayPicker-label{
+        font-size: 15px;
+        font-weight: 600;
+        color: $text-black;
+        font-family: 'Pretendard';
+        margin-bottom: 10px;
+    }
+
+    #dayPicker-checkbox-btn-wrap{
+              margin-bottom: 20px;
+              .dayPicker-checkbox-btn{
+            .dayPicker-checkbox{
+                margin-right: 20px;
+            }
+            span{
+                font-size: 14px;
+                color: $text-black;
+                font-family: 'Pretendard';
+            }
+         }
+    }
+
+}
+
